--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>goit-js-hw-11</title>
-  <link rel="stylesheet" href="./css/gallary.css" />
+  <link rel="stylesheet" href="./css/gallery.css" />
   <script type="module" src="./js/index.js"></script>
 </head>
 
