--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>goit-js-hw-11</title>
+  <title>Домашнее задание #11 GoIT | JavaScript 2.0</title>
   <link rel="stylesheet" href="./css/gallery.css" />
-  <script type="module" src="./js/index.js"></script>
+
 </head>
 
 <body>
@@ -14,12 +14,12 @@
     <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
     <button type="submit">Search</button>
   </form>
-
   <div class="gallery">
     <!-- Карточки изображений -->
   </div>
-
   <button type="button" class="load-more">Load more</button>
+
+  <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
